# database_access

./: .gitignore  README.md  environment.yml  pyproject.toml
database_access/: __init__.py  connect.py  structure_recovery.ipynb  test.py  test_warning.py
test/: test.py  test_data.xlsx  test_data_medium.xlsx  test_warning.py
